--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <version>${deltaspike.version}</version>
             <scope>runtime</scope>
         </dependency>
+        
+        <dependency>
+	<groupId>org.primefaces</groupId>
+	<artifactId>primefaces</artifactId>
+	<version>5.3</version>
+</dependency>
 
     </dependencies>
 
